[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/thg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ActiveBountyWindow.gd" type="Script" id=2]

[node name="ActiveBountyWindow" type="Node2D"]
script = ExtResource( 2 )

[node name="BountySprite" type="Sprite" parent="."]
position = Vector2( 320.023, 367.724 )
scale = Vector2( 0.248411, 0.220621 )
texture = ExtResource( 1 )

[node name="Rush" type="Button" parent="."]
margin_left = 237.262
margin_top = 858.638
margin_right = 413.262
margin_bottom = 933.638
disabled = true
text = "Rush"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
margin_left = 31.6968
margin_top = 858.638
margin_right = 207.697
margin_bottom = 933.638
rect_pivot_offset = Vector2( 110.051, 37.5 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collect" type="Button" parent="."]
margin_left = 446.832
margin_top = 859.973
margin_right = 622.832
margin_bottom = 934.973
rect_pivot_offset = Vector2( 110.051, 37.5 )
disabled = true
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 32.009
margin_top = 753.679
margin_right = 634.009
margin_bottom = 850.679
text = "Assigned Crew Members:
Tony \"TightLips\" McGee [Lv 2 Sharp Shooter]
Alison \"Gater Grip\" Galver [Lv 3 Martial Artist]
Billy \"Bright Eyes\" Wagner [Lv 4 Hacker]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Rush" to="." method="_on_Rush_button_up"]
[connection signal="button_up" from="Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="button_up" from="Collect" to="." method="_on_Collect_button_up"]
